--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <div class="wrapper">
-    <h1>Stopwatch</h1>
-    <h2>Vanilla JavaScript Stopwatch</h2>
-    <p><span id="seconds">00</span>:<span id="tens">00</span></p>
-    <button id="button-start">Start</button>
-    <button id="button-stop">Stop</button>
-    <button id="button-reset">Reset</button>
-    </div> 
-    
+  <h1>Stopwatch</h1>
+  <h2>Vanilla JavaScript Stopwatch</h2>
+  <p><span id="seconds">00</span>:<span id="tens">00</span></p>
+  <ul id="laps"></ul>
+  <button id="button-start">Start</button>
+  <button id="button-lap">Lap</button>
+  <button id="button-stop">Stop</button>
+  <button id="button-reset">Reset</button>
+</div>
